--- a/public/ecosystem/nbgrader/data.yaml
+++ b/public/ecosystem/nbgrader/data.yaml
@@ -1,2 +1,6 @@
 name: nbgrader
 tags: education
+description: >
+  NbGrader provide tools to write, edit, distribute and grade assignments in
+  the classroom context.
+url: https://github.com/jupyter/nbgrader
